<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:background="@drawable/content_bg" 
    android:padding="10.0dip" 
    >
    <TextView 
	   	android:id="@+id/label1" 
	   	android:layout_width="match_parent" 
	   	android:layout_height="wrap_content" 
	   	android:paddingLeft="8.0dip" 
		android:paddingTop="4.0dip" 
	   	android:background="@drawable/content_bg_header" 
	   	android:text="@string/setting_app" 
	   	style="\@style/RCSectionHeader"
	   />
    <TextView 
    	android:id="@+id/lb_token"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
       	android:layout_below="@+id/label1"
    	android:layout_marginLeft="8.0dip" 
    	android:layout_marginTop="4.0dip" 
    	android:textColor="#ff444444"
    	android:text="@string/app_user_token"
    	/>
    <EditText 
		android:id="@+id/token"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="4.0dip" 
	    android:layout_marginRight="4.0dip"
	    android:layout_below="@+id/lb_token"
	    android:background="@android:drawable/editbox_background"
		android:hint="@string/hint_no_token"
		/>
	<TextView 
	    android:id="@+id/lb_page_size"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/token"
	    android:layout_marginLeft="8.0dip" 
	    android:layout_marginTop="4.0dip" 
	    android:textColor="#ff444444"
	    android:text="@string/app_page_size"
	    />
	<EditText 
		android:id="@+id/page_size"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="4.0dip" 
	    android:layout_marginRight="4.0dip"
	    android:layout_below="@+id/lb_page_size"
	    android:background="@android:drawable/editbox_background"
		android:hint="@string/hint_page_size"
		android:inputType="number"
		/>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_size"
        android:background="@drawable/rc_button"
        android:text="@string/action_save"
        android:textSize="18sp"
      />
</RelativeLayout>
