<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright (C) 2012 Longerian (http://www.longerian.me)

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip"
    android:scrollbars="none"
    >
    <RelativeLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:background="@drawable/content_bg" 
        android:paddingBottom="10.0dip" 
        >
        <TextView 
            android:id="@+id/label1" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:paddingLeft="8.0dip" 
		    android:paddingTop="4.0dip" 
            android:background="@drawable/content_bg_header" 
            android:text="@string/user_account_label" 
            style="\@style/RCSectionHeader"
            />
	    <ImageView 
	        android:id="@+id/gravatar"
	        android:layout_width="96dip"
	        android:layout_height="96dip"
	        android:layout_below="@+id/label1"
	        android:layout_alignParentRight="true"
	        android:layout_marginTop="4dip"
	        android:layout_marginRight="4dip"
	        android:contentDescription="@string/alt_avatar"
	        />
		<TextView 
		    android:id="@+id/lb_login"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        android:layout_below="@+id/label1"
	        android:layout_toLeftOf="@+id/gravatar"
		    android:layout_marginLeft="8.0dip" 
		    android:layout_marginTop="4.0dip" 
		    android:textColor="#ff444444"
		    android:text="@string/user_id"
		    />
		<TextView 
		    android:id="@+id/login"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="4.0dip" 
		    android:layout_marginRight="4.0dip"
		    android:layout_below="@+id/lb_login"
		    android:layout_toLeftOf="@+id/gravatar"
		    android:background="@android:drawable/editbox_background"
		    />
		<TextView 
		    android:id="@+id/lb_name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/login"
		    android:layout_marginLeft="8.0dip" 
		    android:layout_marginTop="4.0dip" 
		    android:textColor="#ff444444"
		    android:text="@string/user_name"
		    />
		<TextView 
		    android:id="@+id/name"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/lb_name"
		    android:layout_toLeftOf="@+id/gravatar"
		    android:layout_marginLeft="4.0dip" 
		    android:layout_marginRight="4.0dip"
		    android:background="@android:drawable/editbox_background"
		    />
		<TextView 
		    android:id="@+id/lb_location"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/name"
		    android:text="@string/user_location"
		    android:layout_marginLeft="8.0dip" 
		    android:layout_marginTop="4.0dip" 
		    android:textColor="#ff444444"
		    />
		<TextView 
		    android:id="@+id/location"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/lb_location"
		    android:layout_marginLeft="4.0dip" 
		    android:layout_marginRight="4.0dip"
		    android:background="@android:drawable/editbox_background"
		    />
		<TextView 
		    android:id="@+id/lb_website"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/location"
	   	    android:text="@string/user_website"
	   	    android:layout_marginLeft="8.0dip" 
		    android:layout_marginTop="4.0dip" 
		    android:textColor="#ff444444"
		    />
		<TextView 
		    android:id="@+id/website"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/lb_website"
		    android:autoLink="web"
		    android:linksClickable="true"
		    android:background="@android:drawable/editbox_background"
		    android:layout_marginLeft="4.0dip" 
		    android:layout_marginRight="4.0dip"
		    />
		<TextView 
		    android:id="@+id/lb_bio"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/website"
		    android:text="@string/user_bio"
		    android:layout_marginLeft="8.0dip" 
		    android:layout_marginTop="4.0dip" 
		    android:textColor="#ff444444"
		    />
		<TextView 
		    android:id="@+id/bio"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/lb_bio"
		    android:layout_marginLeft="4.0dip" 
		    android:layout_marginRight="4.0dip"
		    android:background="@android:drawable/editbox_background"
		    />
		<TextView 
		    android:id="@+id/lb_tagline"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/bio"
		    android:text="@string/user_tagline"
		    android:layout_marginLeft="8.0dip" 
		    android:layout_marginTop="4.0dip" 
		    android:textColor="#ff444444"
		    />
		<TextView 
		    android:id="@+id/tagline"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/lb_tagline"
		    android:layout_marginLeft="4.0dip" 
		    android:layout_marginRight="4.0dip"
		    android:background="@android:drawable/editbox_background"
		    />
		<TextView 
		    android:id="@+id/lb_github_url"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/tagline"
		    android:text="@string/user_github"
		    android:layout_marginLeft="8.0dip" 
		    android:layout_marginTop="4.0dip" 
		    android:textColor="#ff444444"
		    />
		<TextView 
		    android:id="@+id/github_url"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/lb_github_url"
		    android:autoLink="web"
		    android:linksClickable="true"
		    android:background="@android:drawable/editbox_background"
		    android:layout_marginLeft="4.0dip" 
		    android:layout_marginRight="4.0dip"
		    />
    </RelativeLayout>
</ScrollView>